[package]
name = "rs260701"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.103"
bytemuck = "1.25.0"
cosmic-text = "0.19.0"
glam = "0.29"
guillotiere = "0.7.0"
image = "0.25.10"
kira = "0.12.1"
winit = "0.30.13"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.62.2", features = ["Win32_UI_WindowsAndMessaging", "Win32_Graphics_Direct3D11", "Win32_Graphics_Direct3D", "Win32_Graphics_Dxgi", "Win32_Graphics_Dxgi_Common", "Win32_Graphics_Direct3D_Fxc"] }
