[package]
name = "app_sethsweeper"
version = "0.1.0"
edition = "2024"

[dependencies]
krjw_engine = { path = "../krjw_engine" }
anyhow = "1.0.103"
winit = "0.30.13"
glam = "0.29"
cosmic-text = "0.19.0"
kira = "0.12.1"
image = "0.25.10"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.62.2", features = ["Win32_UI_WindowsAndMessaging", "Win32_Graphics_Direct3D11", "Win32_Graphics_Direct3D", "Win32_Graphics_Dxgi", "Win32_Graphics_Dxgi_Common", "Win32_Graphics_Direct3D_Fxc"] }
